@@ -1,23 +1,3 @@
-/**
- * Copyright (c) 2009-2011 University of Cardiff and others
- * <p>
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- * <p>
- * http://www.apache.org/licenses/LICENSE-2.0
- * <p>
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
- * implied. See the License for the specific language governing
- * permissions and limitations under the License.
- * <p>
- * Contributors:
- * University of Cardiff - initial API and implementation
- * -
- */
-
 package org.openhealthtools.openatna.audit.persistence.util;
 
 import org.openhealthtools.openatna.anom.*;
@@ -53,13 +33,10 @@ import java.util.*;
  *
  * @author Andrew Harrison
  * @version $Revision:$
- * @created Oct 2, 2009: 5:06:16 PM
- * @date $Date:$ modified by $Author:$
  */
-
 public class QueryString {
 
-    public static final char[] ESCAPED = {'"', '\\'};
+    protected static final char[] ESCAPED = {'"', '\\'};
     private static final Logger LOGGER = LoggerFactory.getLogger(QueryString.class);
 
     private QueryString() {
@@ -108,9 +85,9 @@ public class QueryString {
     }
 
     private static Object getObjectForType(Query.Target target, String value) {
-        if (value.equalsIgnoreCase("true")
-                || value.equalsIgnoreCase("false")) {
-            return new Boolean(value.toLowerCase());
+
+        if (value.equalsIgnoreCase("true") || value.equalsIgnoreCase("false")) {
+            return Boolean.valueOf(value.toLowerCase());
         }
         switch (target) {
             case RESULT:
@@ -137,10 +114,11 @@ public class QueryString {
     }
 
     private static String getStringFromObject(Object value) {
+
         if (value instanceof Date) {
             return Timestamp.format((Date) value);
         } else if (value instanceof EventAction) {
-            return ((EventAction) value).value().toString();
+            return ((EventAction) value).value();
         } else if (value instanceof EventOutcome) {
             return Integer.toString(((EventOutcome) value).value());
         } else if (value instanceof ObjectType) {
@@ -151,10 +129,10 @@ public class QueryString {
             return Integer.toString(((NetworkAccessPoint) value).value());
         }
         return value.toString();
-
     }
 
     public static String create(Query query) {
+
         StringBuilder sb = new StringBuilder();
 
         Map<Query.Target, Set<Query.ConditionalStatement>> map = query.getConditionals();
@@ -179,26 +157,26 @@ public class QueryString {
     }
 
     private static String serializeJoint(Query.ConditionalStatement[] values, Query.Conditional conditional) {
-        StringBuilder sb = new StringBuilder(" ");
+
         Query.ConditionalStatement ct1 = values[0];
         Query.ConditionalStatement ct2 = values[1];
-        sb.append(ct1.getTarget().toString())
-                .append(" ")
-                .append(ct1.getConditional().toString())
-                .append(" ")
-                .append("\"")
-                .append(escape(getStringFromObject(ct1.getValue())))
-                .append("\" ")
-                .append(conditional.toString())
-                .append(" ")
-                .append(ct2.getTarget().toString())
-                .append(" ")
-                .append(ct2.getConditional().toString())
-                .append(" ")
-                .append("\"")
-                .append(escape(getStringFromObject(ct2.getValue())))
-                .append("\" ");
-        return sb.toString();
+
+        return " " + ct1.getTarget().toString() +
+                " " +
+                ct1.getConditional().toString() +
+                " " +
+                "\"" +
+                escape(getStringFromObject(ct1.getValue())) +
+                "\" " +
+                conditional.toString() +
+                " " +
+                ct2.getTarget().toString() +
+                " " +
+                ct2.getConditional().toString() +
+                " " +
+                "\"" +
+                escape(getStringFromObject(ct2.getValue())) +
+                "\" ";
     }
 
     /**
@@ -217,15 +195,14 @@ public class QueryString {
     public static Query parse(String queryString) {
         int state = 0;
         char[] chars = queryString.toCharArray();
-        List<String> targets = new ArrayList<String>();
-        List<String> conditions = new ArrayList<String>();
-        List<String> values = new ArrayList<String>();
-        List<Joint> joints = new ArrayList<Joint>();
+        List<String> targets = new ArrayList<>();
+        List<String> conditions = new ArrayList<>();
+        List<String> values = new ArrayList<>();
+        List<Joint> joints = new ArrayList<>();
         StringBuilder sb = new StringBuilder();
         boolean afterBackslash = false;
         Joint currJoint = null;
-        for (int i = 0; i < chars.length; i++) {
-            char c = chars[i];
+        for (char c : chars) {
             switch (state) {
                 case 0:
                     if (!Character.isSpaceChar(c)) {
@@ -375,6 +352,7 @@ public class QueryString {
     }
 
     public static void main(String[] args) {
+
         Query query = new Query();
         Query.ConditionalStatement t1 = new Query.ConditionalStatement(Query.Conditional.EQUALS, "1",
                 Query.Target.PARTICIPANT_TYPE_CODE_SYSTEM_NAME);
